--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <h1  id="tituço1">Filmes, séries e muito mais, sem limites</h1>
                 <br>
                 <p>Explore um vasto catálogo de filmes com nosso serviço de streaming premium. Desfrute de acesso ilimitado a uma variedade de gêneros, desde sucessos de bilheteria até clássicos cult. Nossa plataforma oferece uma experiência de visualização sem interrupções, disponível em todos os seus dispositivos. Assine agora e mergulhe em entretenimento de qualidade onde e quando quiser. Não perca tempo, embarque nesta jornada cinematográfica conosco hoje! .</p>
-                <a class="planos" href="Planos.html">PLANOS</a> 
+                <a class="planos" href="planos.html">PLANOS</a> 
             </div>
             <div class="cartao">
                 <div class="carta_informacoes">
